--- a/MovieMiner/MovieMiner.Interfaces/MovieMiner.Interfaces.csproj
+++ b/MovieMiner/MovieMiner.Interfaces/MovieMiner.Interfaces.csproj
@@ -40,7 +40,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\IAPIClient.cs" />
+    <Compile Include="Modules\IDataModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Storage\FileType.cs" />
     <Compile Include="Storage\IStorageClient.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
