--- a/MovieMiner/MovieMiner.Storage/MovieMiner.Storage.csproj
+++ b/MovieMiner/MovieMiner.Storage/MovieMiner.Storage.csproj
@@ -32,15 +32,23 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AWS\AWSStorageClient.cs" />
+    <Compile Include="Local\LocalStorageClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MovieMiner.Interfaces\MovieMiner.Interfaces.csproj">
+      <Project>{dc0c2409-1fe3-4f06-a094-7c0ef8becae7}</Project>
+      <Name>MovieMiner.Interfaces</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
