--- a/MovieMiner/MovieMiner.Storage/App.config
+++ b/MovieMiner/MovieMiner.Storage/App.config
@@ -1,11 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
-  <appSettings>
+  <!-- MAKE SURE THIS IS IN THE EXECUTABLE'S APP.CONFIG -->
+	<appSettings>
     <add key="AWSAccessKey" value="AKIAJNZBFEQORVJAIXNA"/>
     <add key="AWSSecretKey" value="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"/>
-    <add key="AWSRegion" value="us-west-2" />
+	<add key="AWSRegion" value="us-west-2" />
   </appSettings>
 </configuration>
