--- a/MovieMiner/MovieMiner/App.config
+++ b/MovieMiner/MovieMiner/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <appSettings>
+    <add key="AWSAccessKey" value="AKIAJNZBFEQORVJAIXNA"/>
+    <add key="AWSSecretKey" value="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"/>
+    <add key="AWSRegion" value="us-west-2" />
+  </appSettings>
 </configuration>
