--- a/MovieMiner/MovieMiner/MovieMiner.Storage/MovieMiner.Storage.csproj
+++ b/MovieMiner/MovieMiner/MovieMiner.Storage/MovieMiner.Storage.csproj
@@ -32,7 +32,7 @@
   <ItemGroup>
     <Reference Include="AWSSDK, Version=2.0.13.2, Culture=neutral, PublicKeyToken=9f476d3089b52be3, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\AWS SDK for .NET\bin\Net45\AWSSDK.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\AWS SDK for .NET\bin\Net45\AWSSDK.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
