--- a/MovieAnalyzer/MovieAnalyzer.Interfaces/MovieAnalyzer.Interfaces.csproj
+++ b/MovieAnalyzer/MovieAnalyzer.Interfaces/MovieAnalyzer.Interfaces.csproj
@@ -40,8 +40,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Modules\IJobModule.cs" />
+    <Compile Include="Modules\RottenTomatoesAPI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Storage\IStorage.cs" />
+    <Compile Include="Storage\FileType.cs" />
+    <Compile Include="Storage\IStorageClient.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
