--- a/MovieAnalyzer/MovieAnalyzer.Modules.NewYorkTimes/MovieAnalyzer.Modules.NewYorkTimes.csproj
+++ b/MovieAnalyzer/MovieAnalyzer.Modules.NewYorkTimes/MovieAnalyzer.Modules.NewYorkTimes.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AB7262A5-9722-42A2-903D-3CE4112A8837}</ProjectGuid>
+    <ProjectGuid>{2AC1C509-61EE-4A66-B097-859ECFE66A2F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MovieAnalyzer.Interfaces</RootNamespace>
-    <AssemblyName>MovieAnalyzer.Interfaces</AssemblyName>
+    <RootNamespace>MovieAnalyzer.Modules.NewYorkTimes</RootNamespace>
+    <AssemblyName>MovieAnalyzer.Modules.NewYorkTimes</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,7 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -39,12 +44,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Modules\IJobModule.cs" />
-    <Compile Include="Modules\NewYorkTimes\NewYorkTimesAPI.cs" />
-    <Compile Include="Modules\RottenTomatoes\RottenTomatoesAPI.cs" />
+    <Compile Include="ThousandsListAnalyzerJob.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Storage\FileType.cs" />
-    <Compile Include="Storage\IStorageClient.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MovieAnalyzer.Interfaces\MovieAnalyzer.Interfaces.csproj">
+      <Project>{ab7262a5-9722-42a2-903d-3ce4112a8837}</Project>
+      <Name>MovieAnalyzer.Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MovieAnalyzer.Storage\MovieAnalyzer.Storage.csproj">
+      <Project>{4b60ef6e-7488-4285-832f-7335d0cf5899}</Project>
+      <Name>MovieAnalyzer.Storage</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
