--- a/MovieMiner/MovieMiner/MovieMiner/MovieMiner.Console.csproj
+++ b/MovieMiner/MovieMiner/MovieMiner/MovieMiner.Console.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Modules\DiscoverModules.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -59,17 +60,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MovieMiner.DiscoveryHost\MovieMiner.DiscoveryHost.csproj">
-      <Project>{95625bf3-da8a-44f2-9c73-f3050e48245b}</Project>
-      <Name>MovieMiner.DiscoveryHost</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MovieMiner.Interfaces\MovieMiner.Interfaces.csproj">
       <Project>{dc0c2409-1fe3-4f06-a094-7c0ef8becae7}</Project>
       <Name>MovieMiner.Interfaces</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MovieMiner.Modules.RottenTomatoes\MovieMiner.Modules.RottenTomatoes.csproj">
-      <Project>{ce455c50-600c-48a2-8d3e-f8c3f92d0ef8}</Project>
-      <Name>MovieMiner.Modules.RottenTomatoes</Name>
+    <ProjectReference Include="..\MovieMiner.Modules.NewYorkTimes\MovieMiner.Modules.NewYorkTimes.csproj">
+      <Project>{ef966091-da35-4951-8159-34cf398454ee}</Project>
+      <Name>MovieMiner.Modules.NewYorkTimes</Name>
     </ProjectReference>
     <ProjectReference Include="..\MovieMiner.Storage\MovieMiner.Storage.csproj">
       <Project>{9a6ed01c-734d-4718-8242-f7ea2f4ccaee}</Project>
