Finalizing code for final turn-in.

--- a/MovieAnalyzer/MovieAnalyzer.Storage/App.config
+++ b/MovieAnalyzer/MovieAnalyzer.Storage/App.config
@@ -2,8 +2,8 @@
 <configuration>
   <!-- MAKE SURE THIS IS IN THE EXECUTABLE'S APP.CONFIG -->
   <appSettings>
-    <add key="AWSAccessKey" value="AKIAJNZBFEQORVJAIXNA"/>
-    <add key="AWSSecretKey" value="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"/>
+    <add key="AWSAccessKey" value="XXXXXXXXXXXXXXXXXXX"/>
+    <add key="AWSSecretKey" value="XXXXXXXXXXXXXX"/>
     <add key="AWSRegion" value="us-west-2" />
   </appSettings>
 </configuration>
